--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
     <artifactId>jetty-quickstart</artifactId>
     <version>9.4.38.v20210224</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/cobertura-maven-plugin -->
+<dependency>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.7</version>
+    <scope>test</scope>
+</dependency>
+
 </dependencies>
 
 <dependencyManagement>
@@ -103,6 +111,17 @@
   <artifactId>jetty-maven-plugin</artifactId>
   <version>9.4.38.v20210224</version>
 </plugin>
+<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>cobertura-maven-plugin</artifactId>
+<configuration>
+<formats>
+<format>html</format>
+<format>xml</format>
+</formats>
+</configuration>
+</plugin>
+
  </plugins>
     </pluginManagement>
   </build>
